--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -3,6 +3,9 @@
 </div>
 <div class="pb-8"></div>
 <div>Form goes here</div>
+<div>
+    <form [formGroup]="form" (ngSubmit)="onSubmit(model)"> <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form> <button type="submit" class="btn btn-default">Submit</button> </form>
+</div>
 <div class="flex relative bg-black">
 
 </div>
