--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,10 +1,16 @@
-<div class="sticky p-4 text-xl font-semibold text-white bg-indigo-700 mat-elevation-z3">
-    DT Rating
+<div class="sticky">
+    <mat-toolbar color="primary">
+        <span>DT Rating System</span>
+    </mat-toolbar>
+    <mat-toolbar-row class="flex gap-3 mat-elevation-z3">
+        <button mat-button>Basic</button>
+        <button mat-button>Basic</button>
+        <button mat-button>Basic</button>
+    </mat-toolbar-row>
 </div>
 <div class="pb-8"></div>
-<div>Form goes here</div>
 <div>
-    <form [formGroup]="form" (ngSubmit)="onSubmit(model)"> <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form> <button type="submit" class="btn btn-default">Submit</button> </form>
+
 </div>
 <div class="flex relative bg-black">
 
