design and colors from thumbnail

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,6 @@
 <div>
   <!-- Navbar -->
-  <div class="sticky w-full top-0 z-10 bg-white">
-    <mat-toolbar color="primary">
-      <span>DT Rating System</span>
-    </mat-toolbar>
-    <mat-toolbar-row class="flex gap-3 mat-elevation-z3">
-      <a mat-button color="primary">Home</a>
-      <button mat-button>About</button>
-    </mat-toolbar-row>
-  </div>
+  <app-navbar></app-navbar>
   <div class="pb-4"></div>
   <!-- End of Navbar -->
 
