--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -16,26 +16,37 @@
       />
     </svg>
   </div>
-  <div *ngFor="let category of categories; index as i" class="flex">
-    <div
-      class="w-36 h-36 p-4 text-4xl uppercase flex align-center items-center"
-      [style]="getStyle(category)"
-    >
-      <span> {{ category.name }} </span>
+  <div class="divide-y divide-y-4">
+    <div *ngFor="let category of categories; index as i" class="flex">
+      <div
+        class="w-36 h-36 p-4 text-4xl uppercase flex align-center items-center"
+        [style]="getStyle(category)"
+      >
+        <span> {{ category.name }} </span>
+      </div>
+      <div
+        class="flex items-center p-4 gap-3 bg-black grow"
+        cdkDropList
+        [cdkDropListData]="categories[i].items"
+        (cdkDropListDropped)="onDrop($event)"
+        cdkDropListOrientation="horizontal"
+      >
+        <mat-chip
+          class="text-4xl"
+          *ngFor="let item of category.items"
+          cdkDrag
+          >{{ item }}</mat-chip
+        >
+      </div>
     </div>
-    <div class="flex"
+    <div
+      class="bg-[#5a1900] h-40 text-4xl flex gap-4 p-3 transition-all duration-75"
       cdkDropList
-      [cdkDropListData]="categories[i].items"
+      [cdkDropListData]="items"
+      cdkDropListOrientation="horizontal"
       (cdkDropListDropped)="onDrop($event)"
     >
-      <mat-chip *ngFor="let item of category.items" cdkDrag>{{item}}</mat-chip>
+      <div mat-button *ngFor="let item of items" cdkDrag>{{ item }}</div>
     </div>
-  </div>
-  <div class="bg-[#5a1900] h-40 text-4xl flex gap-4 p-3"
-    cdkDropList
-    [cdkDropListData]="items"
-    (cdkDropListDropped)="onDrop($event)"
-  >
-    <mat-chip *ngFor="let item of items" cdkDrag>{{item}}</mat-chip>
   </div>
 </div>
